example of numbers without quote made and explained

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <p>here is an example (<i><small>go see the js code from index.js</small></i>) : </p>
     <p>"2" + "7" + "5" = </p>
     <p id="example1"></p>
+    <br>
+    <hr><br>
+    <p>If you don't put numbers in a quote or double quote and put + between them the result will be like this :
+    </p>
+    <p> a + b + c = sum: </p>
+    <p>here is an example (<i><small>go see the js code from index.js</small></i>) : </p>
+    <p>2 + 7 + 5 = </p>
+    <p id="example2"></p><br>
+    <hr><br>
+
 </body>
 <script src="index.js"></script>
 
