the example of first number in string added and explained

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <p id="example2"></p><br>
     <hr><br>
 
+    <p>If you put the first number in a quote or double quote and put + between them the result will be like this :
+    </p>
+    <p> "a" + b + c = abc: </p>
+    <p>here is an example (<i><small>go see the js code from index.js</small></i>) : </p>
+    <p>"2" + 7 + 5 = </p>
+    <p id="example3"></p> <br>
+    <hr>
+
+
 </body>
 <script src="index.js"></script>
 
