example of middle number in quote added and explained

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     <p id="example3"></p> <br>
     <hr>
 
+    <p>If you put one or some of the middle numbers in a quote or double quote and put + between them the result will be like this :
+    </p>
+    <p> a + b + "c" + d + e = (SumOfa+b)cde </p>
+    <p>here is an example (<i><small>go see the js code from index.js</small></i>) : </p>
+    <p>1 + 2 + "7" + 5 + 9 = </p>
+    <p id="example4"></p>
+
 
 </body>
 <script src="index.js"></script>
